--- a/origin/style.css
+++ b/origin/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'times', serif;
   user-select: none;
-    background-color:pink;
+    background-color:#f40b9b;
 
 }
 
@@ -18,6 +18,7 @@ body{
   border-radius:8px;
   font-size:25px;
   text-align: center;
+  background-color:white;
 
 }
 
@@ -106,6 +107,45 @@ a{
   border-radius: 50%;
 
 }
+.child1 a{
+  color: #262525;
+  text-decoration: none;
+  font-size: 20px;
+}
+.child1  h4, .child1  h2{
+  font-size: 20px;
+}
+
+      table {
+      border-collapse: collapse;
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    table td, table th {
+      border: 1px solid #ddd;
+      padding: 8px;
+      font-weight: 600;
+      cursor: pointer;
+    }
+
+    table tr:nth-child(even){
+      background-color: #f2f2f2;
+
+    }
+
+    table tr:hover
+    {
+      background-color: #ddd;
+    }
+
+    table th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      background-color: #040d10a1;
+      color: white;
+    }
 .child2{
   width: 96%;
   padding: 1%;
