--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 	text-align: center;
 	transition: 0.5;
 	transform: translateY(0);
-	background: gray;
+	background: #C0C0C0;
 }
 h3{
 	cursor: pointer;
