--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 	text-align: center;
 	transition: 0.5;
 	transform: translateY(0);
-	background: #C0C0C0;
+	background: #D3D3D3;
 }
 h3{
 	cursor: pointer;
@@ -34,13 +34,14 @@ h3{
 	box-shadow: 2px 3px 10px rgba(0,0,0,.3);
 }
 .child1:hover{
-	width:600px;
-	height:500px;
-	
+	transform: translateY(-20px);
+	transition: 0.5s;
+	box-shadow: 0 0 0 1500px #4e73df;
 }
 .child2:hover{
-	width:600px;
-	height:500px;
+	transform: translateY(-20px);
+	transition: 0.5s;
+	box-shadow: 0 0 0 1500px #4e73df;
 	
 
 }
