--- a/style.css
+++ b/style.css
@@ -36,12 +36,11 @@ h3{
 .child1:hover{
 	transform: translateY(-20px);
 	transition: 0.5s;
-	box-shadow: 0 0 0 1500px;
-}
+	
 .child2:hover{
 	transform: translateY(-20px);
 	transition: 0.5s;
-	box-shadow: 0 0 0 1500px;
+
 	
 
 }
@@ -70,10 +69,9 @@ h3{
 
 }
 a:hover{
-	box-shadow: 14px 14px 22px ;
+	box-shadow: 14px 14px 22px rgba(180,0,0,.5);
 	transition: .5s;
 }
-
 
 @media only screen and (min-width: 320px) and (max-width: 480px){
 .parent{
